# AI4S

./: .gitignore  .gitmodules  日志.md  费用记录.md
EvoLab/: .gitignore  README.md  pyproject.toml
EvoLab-main/: .gitignore  README.md  pyproject.toml
EvoLab-main/dev/: V0_SKILL_TOOL_TEST_PLAN.md  development_plan.md
EvoLab-main/examples/: api_report_session.py  biology_component_extraction_session.py  minimal_session.py
EvoLab-main/tests/: test_agent0_sage_trainer.py  test_agents_config.py  test_api_llm_backend.py  test_biology_component_extraction_example.py  test_biology_generic_subagents_config.py  test_capability_repair.py  test_cli_clean_run.py  test_dynamic_extraction_workflow.py  test_dynamic_per_work_item_planning.py  test_dynamic_subagent_factory.py  test_dynamic_subagent_schema.py  test_dynamic_workflow_planner.py  test_dynamic_workflow_runtime.py  test_embedding_backends.py  test_everos_memory_method.py  test_evolution_executor.py  test_file_text_tools.py  test_generated_tools.py  test_graph_skill_backend.py  test_human_tools.py  test_imports.py  test_lab_queue.py  test_memory_failure_suite.py  test_memory_method_store.py  test_memory_replay.py  test_native_mem0_api_smoke_script.py  test_opsd_pipeline.py  test_post_run_skill_evolution_cases.py  test_promoter_sequence_evaluator.py  test_promotion.py  test_role_pool_runtime.py  test_runtime_contracts.py  test_schema_output_tools.py  test_scientific_artifact_tools.py  test_scientific_ie_seed_graph.py  test_scientific_ie_tool_coverage.py  test_scientific_ie_v1_dag_demo.py  test_sdk_lab_layout.py  (+17 more)
(+480 files in other folders)
